@@ -646,45 +646,8 @@
                   <object class="GtkVBox" id="desktop_page">
                     <property name="visible">True</property>
                     <property name="border_width">2</property>
-                    <property name="spacing">6</property>
+                    <property name="spacing">18</property>
 
-                    <!-- Desktop - Checkboxes -->
-                    <child>
-                      <object class="GtkHBox" id="hbox_desk_click">
-                        <property name="visible">True</property>
-                        <property name="spacing">12</property>
-
-                        <child>
-                          <object class="GtkCheckButton" id="desk_single_click">
-                            <property name="visible">True</property>
-                            <property name="can_focus">False</property>
-                            <property name="label" translatable="yes">Single click opens</property>
-                            <property name="use_underline">True</property>
-                            <property name="draw_indicator">True</property>
-                          </object>
-                          <packing>
-                            <property name="expand">False</property>
-                          </packing>
-                        </child>
-                        <child>
-                          <object class="GtkCheckButton" id="show_wm_menu">
-                            <property name="visible">True</property>
-                            <property name="can_focus">False</property>
-                            <property name="label" translatable="yes">Right click shows WM menu</property>
-                            <property name="use_underline">True</property>
-                            <property name="draw_indicator">True</property>
-                          </object>
-                          <packing>
-                            <property name="expand">False</property>
-                          </packing>
-                        </child>
-
-                      </object>
-                      <packing>
-                        <property name="expand">False</property>
-                      </packing>
-                    </child>
-                    
                     <!-- Desktop 2-column table -->
                     <child>
                       <object class="GtkTable" id="table_desk">
@@ -990,6 +953,59 @@
                         </child>
 
                       </object>
+                      <packing>
+                        <property name="expand">False</property>
+                      </packing>
+                    </child>
+
+                    <!-- Desktop - Checkboxes -->
+                    <child>
+                      <object class="GtkHBox" id="hbox_desk_click">
+                        <property name="visible">True</property>
+                        <property name="spacing">12</property>
+
+                        <child>
+                          <object class="GtkCheckButton" id="desk_single_click">
+                            <property name="visible">True</property>
+                            <property name="can_focus">False</property>
+                            <property name="label" translatable="yes">Single click opens</property>
+                            <property name="use_underline">True</property>
+                            <property name="draw_indicator">True</property>
+                          </object>
+                          <packing>
+                            <property name="expand">False</property>
+                          </packing>
+                        </child>
+                        <child>
+                          <object class="GtkCheckButton" id="show_wm_menu">
+                            <property name="visible">True</property>
+                            <property name="can_focus">False</property>
+                            <property name="label" translatable="yes">Right click shows WM menu</property>
+                            <property name="use_underline">True</property>
+                            <property name="draw_indicator">True</property>
+                          </object>
+                          <packing>
+                            <property name="expand">False</property>
+                          </packing>
+                        </child>
+
+                      </object>
+                      <packing>
+                        <property name="expand">False</property>
+                      </packing>
+                    </child>
+                    
+                    <child>
+                      <object class="GtkCheckButton" id="desk_open_mime">
+                        <property name="visible">True</property>
+                        <property name="can_focus">False</property>
+                        <property name="label" translatable="yes">Open folders using associated MIME application</property>
+                        <property name="use_underline">True</property>
+                        <property name="draw_indicator">True</property>
+                      </object>
+                      <packing>
+                        <property name="expand">False</property>
+                      </packing>
                     </child>
 
                   </object>
