@@ -1555,7 +1555,8 @@ void open_file( const char* path )
         VFSAppDesktop* app;
         GList* files;
 
-        app_name = (char *) ptk_choose_app_for_mime_type( NULL, mime_type, FALSE );
+        app_name = (char *) ptk_choose_app_for_mime_type( NULL, mime_type,
+                                                          FALSE, FALSE );
         if ( app_name )
         {
             app = vfs_app_desktop_new( app_name );
