@@ -1649,7 +1649,7 @@ on_popup_open_with_another_activate ( GtkMenuItem *menuitem,
     else
         parent_win = GTK_WIDGET( data->desktop );
     app = (char *) ptk_choose_app_for_mime_type( GTK_WINDOW( parent_win ),
-                                                            mime_type, FALSE );
+                                            mime_type, FALSE, TRUE );
     if ( app )
     {
         GList* sel_files = data->sel_files;
@@ -1672,7 +1672,8 @@ void on_popup_open_all( GtkMenuItem *menuitem, PtkFileMenu* data )
     if( ! sel_files )
         sel_files = g_list_prepend( sel_files, data->info );
     ptk_open_files_with_app( data->cwd, sel_files,
-                             NULL, data->browser, FALSE, TRUE );
+                             NULL, FALSE /*allow MIME app - was data->browser*/,
+                             FALSE, TRUE );
     if( sel_files != data->sel_files )
         g_list_free( sel_files );
 }
@@ -1808,7 +1809,7 @@ void app_job( GtkWidget* item, GtkWidget* app_item )
                                 GTK_WINDOW( gtk_widget_get_toplevel( data->browser ?
                                                 GTK_WIDGET( data->browser ) :
                                                 GTK_WIDGET( data->desktop ) ) ),
-                                                mime_type, FALSE );
+                                                mime_type, FALSE, TRUE );
         // ptk_choose_app_for_mime_type returns either a bare command that 
         // was already set as default, or a (custom or shared) desktop file
         if ( path && g_str_has_suffix( path, ".desktop" ) && !strchr( path, '/' )
